Eliminated whitespace below map; fixed social icon spacing and footer font sizes; checking in before cleaning up

--- a/css/main.css
+++ b/css/main.css
@@ -193,7 +193,7 @@ header nav {
 header nav ul {
   display: flex;
   justify-content: space-around;
-  width: 100%; /* --- (Takes up 100% of the 60% header nav width) --- */
+  width: 100%;
 }
   
 header nav ul li {
@@ -223,7 +223,8 @@ footer .contact {
 
 footer .social-icons {
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -343,23 +344,14 @@ input[type=button] {
 
 /* Reviews */
 .reviews {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
-  background-color: #2a423a;
 }
-
-/* .reviews #team-photo-wrapper img { 
-	width: 100%;
-}
- 
-.reviews #team-photo-wrapper figure {
-    margin: 0;
-} */
 
 .reviews h2 {
   margin-bottom: 40px; /* 3.75em */
   line-height: 1; /* h2: 30px */
-  /* width: 80%; */
 }
 
 .reviews h3 {
@@ -381,7 +373,7 @@ input[type=button] {
 .map figure {
     width: 100%;
     height: 0; 
-    padding-bottom: 125%; 
+    padding-bottom: 56%; 
     overflow: hidden;
     position: relative;
 }
@@ -585,7 +577,7 @@ input[type=button] {
 
   header .content-wrapper img {
 
-    width: 30%;
+    width: 50%;
     /* display: flex;
     justify-content: center; */
     /* margin: 0; */
@@ -646,7 +638,7 @@ input[type=button] {
   }
 
   /* Reviews */
-  .reviews article {
+   .reviews article {
     display: flex;
     justify-content: space-between;
   }
@@ -655,9 +647,17 @@ input[type=button] {
     width: 77%;
   }
 
+
+  /* --- ### TRY TO FIX IMAGE AND REVIEW ALIGNMENT ### --- */
   .reviews article figure,
   .reviews article div {
     width: 49%;    
+  }
+
+  /* --- --- --- */
+  .reviews h3 {
+    width: 75%;
+    margin: 0;
   }
 
   /* Footer */
@@ -687,6 +687,12 @@ input[type=button] {
 
   footer p {
     line-height: 1.286;
+  }
+
+  /* --- ### --- */
+  footer .social-icons {
+    width: 12.5em;
+    justify-content: space-between;
   }
 
   footer .copyright {
@@ -803,11 +809,6 @@ input[type=button] {
   .reviews article div {
     width: 42%;
   }
-
-  footer p {
-    font-size: 1.875em;
-  }
-
 
   /* ==================== 
      Desktop - About page 
